--- a/frontend/src/components/filters/Filters.module.css
+++ b/frontend/src/components/filters/Filters.module.css
@@ -16,6 +16,7 @@ padding: 8px 16px;
 
     background-color: #ddd;
     text-transform: lowercase;
+    color: black;
 
     transition: background-color 0.3s ease;
     cursor: pointer;
